- Incorporate patch from Alan Batie to fix bugs with include_conf.
- check for quoting on $rsync_long_args rather than just splitting on space.
- Change rsnapshot.conf default to have lockfile enabled.
- Check for stale lock files (PID not currently running).
- explicitly add mode 0644 to sysopen() to create lockfile
- give warning if write() or close() return 0 when writing/closing lockfile
- Add man page for rsnapshot-diff (generated from perldoc).
- Updates to rsnapshot man pages (via perldoc).
  - add missing =back
  - document stale lock file detection 
  - strongly recommend using a lock file
  - add a chmod to example backup script
  - change crontab example for weekly from 4 "weekly"s per month to 1 per week
  - expand on why higher intervals are done first via cron.
- Change space to tab after #cmd_rsnapshot_diff in rsnapshot.conf.default.in.
- In rpm patch, set cmd_rsnapshot_diff to /usr/bin/rsnapshot-diff.
- Set the test scripts t/*.t.in to run from the source directory
  and create directory t/support/files/a if necessary.
- Trim comments in README about gnu cp versions > 5.3 since rsnapshot 
  strips trailing slashes for gnu cp with rsnapshot 1.2.9 and later.
- Add pointers to HOWTO and utils/rsnapreport.pl in README.
- More examples (eg: timestamp backup_script) in rsnapshot.conf.default.in.


VERSION 1.2.9  (May 18 2006)
------------------------------------------------------------------------------
- David Keegel <djk@cybersource.com.au> now responsible for release
  management
- Added utils/rsnapreport.pl, written by William Bear.
- Detect exit status 23 and 24 from rsync in rsync_cleanup_after_native_cp_al
- Add $! (system error message) to various warning messages in native_cp_al
- Add more examples and comments to rsnapshot.conf.default.in
- In Makefile*, for "make tar", include "t" (testing) in the tar file.
- Do not strip the trailing slash if it's a remote root filesystem.
  (This was a bug in rsnapshot 1.2.3 if you use "backup host:/  ...")